--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <main>
+        
         <div >
             <h1>Login</h1>
             <div>
@@ -27,6 +28,8 @@
             <h2 >HTML CSS Login Form</h2>
             <p>This login form is created using pure HTML and CSS. For more information you can try by using it.</p>
         </div>
+        <div class="ball"></div>
+        <div class="ball"></div>
     </main>
 </body>
 
